# nes_rust

./: Cargo.toml  README.md  flake.nix
benches/: bench.rs
examples/nestest/: main.rs  nes.rs
examples/runrom/: main.rs  nes.rs
src/: bin.rs  lib.rs  main.rs
src/C6502/: cpu.rs  instructions.rs  mod.rs
src/apu/: mod.rs
src/cartidge/: mapper.rs  mod.rs
src/cpu/: core.rs  instructions.rs  mod.rs
src/ppu/: mod.rs
