[package]
name = "nes_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "nes_rust"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"

[dev-dependencies]
anyhow = "1.0"
thiserror = "2.0"
lazy_static = "1.5"
winit = "0.30"
egui = "0.29"
egui-winit = "0.29"
egui-wgpu = "0.29"
pollster = "0.4"
wgpu = "22.1"
